# http-message-php-ext

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.frag  README.md  build-packagexml.php  composer.json  config.m4  config.w32  emitter.c  factory.c  http_message.c  macros.h  marcos.h  message.c  package.xml  php.ini  php_http_message.h  phpunit.xml.dist  request.c  request.h  response.c  response.h  server_request.c  sign.gpg.enc  stream.c  stream.h  uploaded_file.c  uploaded_file.h  uri.c
.appveyor/: build.cmd  test.cmd
.ci/: appveyor.psm1  php-appveyor.psm1
autoconf/: php-executable.m4
tests/: smoke.php
tests/Emitter/: emit_001.phpt  emit_002.phpt  emit_003.phpt  emit_004.phpt  emit_005.phpt  emit_006.phpt  emit_007.phpt
tests/Factory/: createRequest_001.phpt  createRequest_002.phpt  createResponse_001.phpt  createResponse_002.phpt  createResponse_003.phpt  createResponse_004.phpt  createResponse_err01.phpt  createResponse_err02.phpt  createServerRequest_001.phpt  createServerRequest_002.phpt  createServerRequest_003.phpt  createServerRequest_err01.phpt  createStreamFromFile_001.phpt  createStreamFromFile_002.phpt  createStreamFromFile_003.phpt  createStreamFromFile_err01.phpt  createStreamFromFile_err02.phpt  createStreamFromResource_001.phpt  createStreamFromResource_err01.phpt  createStreamFromResource_err02.phpt  createStream_001.phpt  createStream_002.phpt  createStream_err01.phpt  createUploadedFile_001.phpt  createUploadedFile_002.phpt  createUploadedFile_003.phpt  createUploadedFile_err01.phpt  createUploadedFile_err02.phpt  createUri_001.phpt  createUri_002.phpt
tests/Message/: body_001.phpt  body_err01.phpt  headers_001.phpt  headers_002.phpt  headers_003.phpt  headers_err01.phpt  headers_err02.phpt  headers_err03.phpt  headers_err04.phpt  headers_err05.phpt  protocolVersion_001.phpt  protocolVersion_002.phpt  protocolVersion_err01.phpt
tests/Request/: __construct_001.phpt  method_001.phpt  method_err01.phpt  requestTarget_001.phpt  requestTarget_002.phpt  requestTarget_err01.phpt  uri_001.phpt  uri_err01.phpt
tests/Response/: __construct_001.phpt  status_001.phpt  status_002.phpt  status_003.phpt  status_004.phpt  status_err01.phpt  status_err02.phpt
tests/ServerRequest/: __construct_001.phpt  __construct_002.phpt  __construct_003.phpt  __construct_004.phpt  __construct_005.phpt  __construct_err01.phpt  attributes_001.phpt  attributes_002.phpt  attributes_err01.phpt  (+6 more)
(+135 files in other folders)
